# water-reaction-detection

./: .gitignore  README.md  app.py  client_config.py  dataset.yaml  predict.py  reaction_app.py  release.json  requirements-client.txt  result_storage.py  train_cnn.py  train_yolo.py  upload_queue.py  upload_worker.py  water_detection.spec
android-app/: gradle.properties  release-signing.properties.example  settings.gradle  一键更新模型并生成APK.bat
android-app/app/: build.gradle  proguard-rules.pro
android-app/scripts/: build-formal-release.ps1  verify-formal-release.ps1  模型更新打包工具.ps1
docs/: operations.md  中文使用说明.md  发布说明-v1.0.4.md  正式发布指南.md
model-contract/: model-manifest.schema.json
model-contract/golden/: current-model-parity.json
model-tools/: pyproject.toml
model-tools/src/water_models/: __init__.py  cli.py  contracts.py  conversion.py  geometry.py  inference.py  parity.py
model-tools/tests/: test_cli.py  test_contracts.py  test_conversion.py  test_geometry.py  test_inference.py  test_parity.py
packaging/windows/: water-detection.iss
scripts/: annotation_tool.py  auto_label.py  build-windows-formal-release.ps1  build_release.ps1  e2e_smoke.py  package-icon-assets.py  predict.py  train_classifier.py  train_detector.py  verify-windows-formal-release.ps1
server/: requirements.txt  wsgi.py
tests/: test_client_config.py  test_e2e_smoke.py  test_formal_release_contract.py  test_icon_assets.py  test_icon_contract.py  test_reaction_app_integration.py  test_release_layout.py  test_result_storage.py  test_upload_queue.py  test_upload_worker.py
(+88 files in other folders)
