[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "water-model-tools"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy==2.3.5",
    "opencv-python==4.13.0.92",
    "tensorflow==2.21.0",
    "ultralytics==8.4.25",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4,<9",
    "jsonschema>=4.25,<5",
]

[project.scripts]
water-models = "water_models.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
